# RedLightDL

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  install.bat  install.sh  pyproject.toml  rebrand.ps1  run.py  setup.iss
.github/workflows/: release.yml
PHShorts/: __init__.py  api.py  async_downloader.py  cli.py  database.py  downloader.py  search.py
RedLight/: __init__.py  api.py  aria2_downloader.py  async_downloader.py  batch.py  cli.py  converter.py  database.py  downloader.py  metadata.py  multi_search.py  playlist.py  resume_manager.py  search.py  server.py  version.py
RedLight/cli/: commands.py  download.py  interactive.py  ui.py
RedLight/sites/: __init__.py  base.py  eporner.py  pornhub.py  registry.py  spankbang.py
docs/: API.md  Advanced.md  Classes.md  Examples.md  MultiSite.md  QuickStart.md  README.md
examples/: basic_usage.py  batch_advanced.py  batch_download.py  multi_site_download.py  multi_site_search.py  progress_tracking.py  site_specific_features.py  telegram_bot.py
gui/client/: package-lock.json
gui/client/src/: App.jsx
