[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ph-shorts"  # اسم رو unique کن با username خودت
version = "1.0.0"
description = "Download PornHub Shorts videos - Simpler & lighter than yt-dlp"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "PH Shorts Team"}
]
keywords = ["pornhub", "downloader", "video", "shorts", "hls", "m3u8", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

dependencies = [
    "requests>=2.31.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ph-shorts"
"Bug Tracker" = "https://github.com/yourusername/ph-shorts/issues"
Documentation = "https://github.com/yourusername/ph-shorts#readme"

[project.scripts]
ph-shorts = "PHShorts.cli:main"
phsdl = "PHShorts.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["PHShorts*"]
exclude = ["tests*"]
